--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,18 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
+    "chokidar": "^4.0.0",
+    "core-js": "^3.38.1",
     "express": "^4.21.0",
-    "react": "^18.2.0",
+    "fsevents": "^2.3.3",
+    "joi": "^17.13.3",
+    "react": "^18.3.1",
     "react-calendar-heatmap": "^1.9.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^3.0.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
-    "web-vitals": "^2.1.4"
+    "react-use-set": "^1.0.0",
+    "rimraf": "^6.0.1",
+    "rsuite": "^5.70.2",
+    "web-vitals": "^4.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +46,21 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/eslint-parser": "^7.25.1",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-async-generator-functions": "^7.25.4",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.24.7",
+    "@babel/plugin-transform-numeric-separator": "^7.24.7",
+    "@babel/plugin-transform-object-rest-spread": "^7.24.7",
+    "@babel/plugin-transform-optional-catch-binding": "^7.24.7",
+    "@babel/plugin-transform-optional-chaining": "^7.24.8",
+    "@babel/plugin-transform-unicode-property-regex": "^7.24.7",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "eslint-webpack-plugin": "^4.2.0",
+    "html-webpack-plugin": "^5.6.0"
   }
 }
