--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,6 @@
     "chokidar": "^4.0.0",
     "core-js": "^3.38.1",
     "express": "^4.21.0",
-    "fsevents": "^2.3.3",
     "joi": "^17.13.3",
     "react": "^18.3.1",
     "react-calendar-heatmap": "^1.9.0",
@@ -27,11 +26,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "preinstall": "npm config set optional false"
-  },
-  "resolutions": {
-    "fsevents": "0.0.0"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -66,5 +61,8 @@
     "@babel/preset-react": "^7.24.7",
     "eslint-webpack-plugin": "^4.2.0",
     "html-webpack-plugin": "^5.6.0"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.3"
   }
 }
