--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "chokidar": "^4.0.0",
     "core-js": "^3.38.1",
     "express": "^4.21.0",
+    "gsap": "^3.12.5",
     "joi": "^17.13.3",
+    "jquery": "^3.7.1",
     "react": "^18.3.1",
     "react-calendar-heatmap": "^1.9.0",
     "react-dom": "^18.3.1",
