--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,17 +6,23 @@
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
+    "@uiw/react-heat-map": "^2.3.2",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
     "chokidar": "^4.0.0",
+    "contribution-heatmap": "^1.4.1",
     "core-js": "^3.38.1",
     "express": "^4.21.0",
     "gsap": "^3.12.5",
     "joi": "^17.13.3",
     "jquery": "^3.7.1",
+    "leetcode-calendar": "^1.0.1",
     "react": "^18.3.1",
     "react-calendar-heatmap": "^1.9.0",
     "react-dom": "^18.3.1",
+    "react-github-contribution-calendar": "^2.2.0",
+    "react-grid-heatmap": "^1.3.0",
+    "react-heatmap-grid": "^0.9.1",
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
