--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "contribution-heatmap": "^1.4.1",
     "core-js": "^3.38.1",
     "express": "^4.21.0",
-    "gsap": "^3.12.5",
+    "gsap": "^3.12.7",
     "joi": "^17.13.3",
     "jquery": "^3.7.1",
     "leetcode-calendar": "^1.0.1",
@@ -24,6 +24,7 @@
     "react-grid-heatmap": "^1.3.0",
     "react-heatmap-grid": "^0.9.1",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^7.1.3",
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
     "react-use-set": "^1.0.0",
