changed telegram id

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-TELEGRAM_BOT_TOKEN = 7274937726:AAHcEiUHF2ib2lyAlxSyXg2dOJcOlthIOFg
-TELEGRAM_CHAT_ID = 7032407669
+TELEGRAM_BOT_TOKEN=8001218652:AAGHh_23_zgikg0VkiPF6aDhFTztKFx7cyM
+TELEGRAM_CHAT_ID=1342074938
