--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.21.0",
     "node": "^22.8.0"
   },
