--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.7.1",
     "leetcode-calendar": "^1.0.1",
     "react": "^18.3.1",
+    "react-activity-calendar": "^2.7.15",
     "react-calendar-heatmap": "^1.9.0",
     "react-dom": "^18.3.1",
     "react-github-contribution-calendar": "^2.2.0",
